feat: LinkType 单侧实体类型与架构层级单 cardTypeId
Made-with: Cursor